[package]
name = "s3_stream_download"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.49.0"
aws-smithy-runtime-api = "1.7.2"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
bytes = "1.7.2"
dotenv = "0.15.0"
tokio-tar = "0.3.1"
